new exec saving things

--- a/05_Train_Validate_Models/999.2 - Multiple models comparision plot_grid_search_stats.ipynb
+++ b/05_Train_Validate_Models/999.2 - Multiple models comparision plot_grid_search_stats.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -242,23 +242,19 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Fitting 15 folds for each of 1 candidates, totalling 15 fits\n",
-      "Fitting 15 folds for each of 2 candidates, totalling 30 fits\n",
-      "Fitting 15 folds for each of 1 candidates, totalling 15 fits\n",
-      "Fitting 15 folds for each of 1 candidates, totalling 15 fits\n",
-      "Fitting 15 folds for each of 4 candidates, totalling 60 fits\n",
-      "Fitting 15 folds for each of 8 candidates, totalling 120 fits\n",
-      "Fitting 15 folds for each of 4 candidates, totalling 60 fits\n",
-      "Fitting 15 folds for each of 8 candidates, totalling 120 fits\n",
-      "\n",
-      "FINISHED !!!\n"
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
+    "\n",
+    "def warn(*args, **kwargs):\n",
+    "    pass\n",
+    "import warnings\n",
+    "warnings.warn = warn\n",
     "\n",
     "import sys\n",
     "import os\n",
@@ -273,18 +269,266 @@
     "import utils_exec_models\n",
     "import utils_exec_models_new\n",
     "\n",
-    "# Get the scaled Training and Validation subsets\n",
-    "use_diagnosis_delay = True\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "#to view entire text of the comuns\n",
+    "pd.set_option('display.max_colwidth', None) \n",
     "\n",
-    "X_train, y_train, X_valid, y_valid = utils.get_train_and_validation_data(\n",
+    "import sklearn as sk\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from IPython.core.display import HTML\n",
+    "\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "# Import module for data visualization\n",
+    "from plotnine import *\n",
+    "import plotnine\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "%matplotlib inline  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " FINISHED !!! [Single_Model - without_Diagnosis_Delay - NB]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Scenario</th>\n",
+       "      <th>Features</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>balanced_accuracy</th>\n",
+       "      <th>sensitivity</th>\n",
+       "      <th>specificity</th>\n",
+       "      <th>f1_score</th>\n",
+       "      <th>AUC</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Hyperparams</th>\n",
+       "      <th>Estimator</th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>train_balanced_accuracy</th>\n",
+       "      <th>train_sensitivity</th>\n",
+       "      <th>train_specificity</th>\n",
+       "      <th>train_f1_score</th>\n",
+       "      <th>train_AUC</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>train_precision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Single_Model</td>\n",
+       "      <td>without_Diagnosis_Delay</td>\n",
+       "      <td>Naïve Bayes</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>...</td>\n",
+       "      <td>{}</td>\n",
+       "      <td></td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Scenario                 Features        Model  balanced_accuracy  \\\n",
+       "0  Single_Model  without_Diagnosis_Delay  Naïve Bayes               0.77   \n",
+       "\n",
+       "   sensitivity  specificity  f1_score   AUC  accuracy  precision  ...  \\\n",
+       "0          0.7         0.84      0.49  0.88      0.82       0.37  ...   \n",
+       "\n",
+       "  Hyperparams Estimator fit_time  train_balanced_accuracy  train_sensitivity  \\\n",
+       "0          {}               0.01                     0.76               0.65   \n",
+       "\n",
+       "   train_specificity  train_f1_score  train_AUC  train_accuracy  \\\n",
+       "0               0.87            0.51       0.85            0.84   \n",
+       "\n",
+       "   train_precision  \n",
+       "0             0.43  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'asdasa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_163241/2861298338.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_validation_performances\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m \u001b[0masdasa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m \u001b[0;31m# verify if already exists an CSV with the results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0moverwrite_results_saved_previously\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'asdasa' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# get train and tezt sets INCLUDING the Diagnosis_Delay feature\n",
+    "X_train_all, y_train_all, X_valid_all, y_valid_all = utils.get_train_and_validation_data(\n",
     "    scaled=True,\n",
-    "    use_diagnosis_delay=use_diagnosis_delay,\n",
+    "    use_diagnosis_delay=True,\n",
+    ")\n",
+    "\n",
+    "# get train and tezt sets REMOVING the Diagnosis_Delay feature\n",
+    "X_train_ndd, y_train_ndd, X_valid_ndd, y_valid_ndd = utils.get_train_and_validation_data(\n",
+    "    scaled=True,\n",
+    "    use_diagnosis_delay=False,\n",
     ")\n",
     "\n",
     "\n",
-    "csv_performances_saved = os.path.abspath('99_multiple_comparison_problem/_best_results_Single_Model.csv')\n",
+    "\n",
+    "datasets = [\n",
+    "    ['All_Features', X_train_all, y_train_all, X_valid_all, y_valid_all],\n",
+    "    ['without_Diagnosis_Delay', X_train_ndd, y_train_ndd, X_valid_ndd, y_valid_ndd],\n",
+    "] \n",
     "\n",
     "\n",
+    "\n",
+    "# pattern to save the instance for each gridSearch object generated\n",
+    "dir_dest = os.path.abspath('exec_results')\n",
+    "\n",
+    "\n",
+    "# define the Cross-Validation strategy\n",
+    "CV_N_SPLITS = 4\n",
+    "CV_N_REPEATS = 3\n",
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "cv = sk.model_selection.RepeatedStratifiedKFold(n_splits=CV_N_SPLITS, n_repeats=CV_N_REPEATS, random_state=RANDOM_STATE)\n",
+    "\n",
+    "\n",
+    "grids_executed = []\n",
+    "\n",
+    "\n",
+    "# get all param_grid combinations for each classifier\n",
+    "testing = True\n",
+    "# testing = False\n",
+    "\n",
+    "grid_configs = [\n",
+    "    utils_exec_models_new.create_models_DT_grid(testing=testing),\n",
+    "    utils_exec_models_new.create_models_NB_Gaussian_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_NB_Complement_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_kNN_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_RadiusNN_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_SVM_grid(testing=testing),    \n",
+    "#     utils_exec_models_new.create_models_RF_grid(testing=testing),\n",
+    "#     utils_exec_models_new.create_models_NN_grid(qty_features=X_train.shape[1], testing=testing),\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ======================================================================\n",
+    "# ======================================================================\n",
+    "# ======================================================================\n",
+    "# ======================================================================\n",
+    "\n",
+    "# for each features_config and datasets\n",
+    "for features_config, X_train, y_train, X_valid, y_valid in datasets:\n",
+    "    # for each ML algorithm and param_grid\n",
+    "    for classifier, param_grid in grid_configs: \n",
+    "        model_desc = utils.get_model_short_description(classifier).replace('-', '')\n",
+    "        utils.print_string_with_separators(f'{scenario} - {features_config} - {model_desc}')\n",
+    "\n",
+    "\n",
+    "        # ====================================================\n",
+    "        # execute gridSearch in the Single-Model scenario\n",
+    "        # ====================================================\n",
+    "        scenario = 'Single_Model'\n",
+    "\n",
+    "        grid = ArithmeticError()\n",
+    "        grid = sk.model_selection.GridSearchCV(\n",
+    "            estimator=classifier, \n",
+    "            param_grid=param_grid, \n",
+    "            scoring=utils_exec_models_new.get_default_scoring(), \n",
+    "            cv=cv,\n",
+    "            verbose=1,\n",
+    "            n_jobs=utils_exec_models_new.N_JOBS, #7\n",
+    "            return_train_score=True,\n",
+    "            refit=utils_exec_models_new.DEFAULT_SCORE # balanced accuracy\n",
+    "        )\n",
+    "\n",
+    "        # fit the grid and save the trainning and validation performances\n",
+    "        grid, df_validation_performances = utils_exec_models_new.exec_grid_search_and_save_performances(\n",
+    "            dir_dest=dir_dest, \n",
+    "            testing=testing, \n",
+    "            grid=grid, \n",
+    "            classifier=classifier, \n",
+    "            scenario=scenario, \n",
+    "            features_config=features_config, \n",
+    "            X_train=X_train, \n",
+    "            y_train=y_train, \n",
+    "            X_valid=X_valid, \n",
+    "            y_valid=y_valid,\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "\n",
+    "        clear_output() \n",
+    "\n",
+    "        print(f' FINISHED !!! [{scenario} - {features_config} - {model_desc}]')\n",
+    "        print()\n",
+    "        \n",
+    "#         break\n",
+    "        \n",
+    "# ======================================================================\n",
+    "# ======================================================================\n",
+    "# ======================================================================\n",
+    "# ======================================================================\n",
+    "        \n",
+    "        \n",
+    "display(df_validation_performances)    \n",
+    "    \n",
+    "asdasa\n",
     "# verify if already exists an CSV with the results\n",
     "overwrite_results_saved_previously = False\n",
     "\n",
@@ -296,24 +540,13 @@
     "\n",
     "\n",
     "testing = True\n",
-    "# testing = False\n",
-    "\n",
-    "grid_configs = [\n",
-    "    utils_exec_models_new.create_models_NB_Gaussian_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_NB_Complement_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_kNN_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_RadiusNN_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_DT_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_SVM_grid(testing=testing),    \n",
-    "    utils_exec_models_new.create_models_RF_grid(testing=testing),\n",
-    "    utils_exec_models_new.create_models_NN_grid(qty_features=X_train.shape[1], testing=testing),\n",
-    "]\n",
+    "testing = False\n",
     "\n",
     "additionals_info = []\n",
     "\n",
-    "cv = RepeatedStratifiedKFold(n_splits=5, n_repeats=3, random_state=0)\n",
     "\n",
-    "searchs = []\n",
+    "\n",
+    "\n",
     "\n",
     "for classifier, param_grid in grid_configs: \n",
     "    \n",
@@ -3247,7 +3480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
