--- a/05_Train_Validate_Models/13.1 - Checking and comparing the results obtained.ipynb
+++ b/05_Train_Validate_Models/13.1 - Checking and comparing the results obtained.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 231,
    "id": "d7883950",
    "metadata": {
     "scrolled": true
@@ -82,10 +82,13 @@
        "  '/home/papaiz/python-projects/_my_thesis/als_prognosis_using_ensemble_imbalance/05_Train_Validate_Models/exec_results_Single_Model_All_Features'],\n",
        " ['Single Model',\n",
        "  'Without Diagnosis_Delay',\n",
-       "  '/home/papaiz/python-projects/_my_thesis/als_prognosis_using_ensemble_imbalance/05_Train_Validate_Models/exec_results_Single_Model_without_Diagnosis_Delay']]"
+       "  '/home/papaiz/python-projects/_my_thesis/als_prognosis_using_ensemble_imbalance/05_Train_Validate_Models/exec_results_Single_Model_without_Diagnosis_Delay'],\n",
+       " ['[UNDEFINED]',\n",
+       "  'All Features',\n",
+       "  '/home/papaiz/python-projects/_my_thesis/als_prognosis_using_ensemble_imbalance/05_Train_Validate_Models/exec_results_TESTING']]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
