--- a/05_Train_Validate_Models/15.1 - Compare the performances of both scenarios.ipynb
+++ b/05_Train_Validate_Models/15.1 - Compare the performances of both scenarios.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
     "    'balanced_accuracy',\n",
     "    'sensitivity',\n",
     "    'specificity',\n",
-    "    'AUC',\n",
+    "#     'AUC',\n",
     "]\n",
     "\n",
     "df_all_models.sort_values(by=['Algorithm', 'Scenario'], ascending=[True, True], inplace=True)    \n",
@@ -527,29 +527,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{llrrrr}\n",
+      "\\begin{tabular}{llrrr}\n",
       "\\toprule\n",
-      "Algorithm & Scenario & balanced_accuracy & sensitivity & specificity & AUC \\\\\n",
+      "Algorithm & Scenario & balanced_accuracy & sensitivity & specificity \\\\\n",
       "\\midrule\n",
-      "Decision Tree & Ensemble-Imbalance & 0.88 & 0.96 & 0.81 & 0.94 \\\\\n",
-      "Decision Tree & Single-Model & 0.83 & 0.85 & 0.81 & 0.88 \\\\\n",
-      "Naïve Bayes & Ensemble-Imbalance & 0.84 & 0.85 & 0.83 & 0.90 \\\\\n",
-      "Naïve Bayes & Single-Model & 0.80 & 0.74 & 0.86 & 0.90 \\\\\n",
-      "Neural Networks & Ensemble-Imbalance & 0.88 & 0.96 & 0.80 & 0.93 \\\\\n",
-      "Neural Networks & Single-Model & 0.87 & 0.87 & 0.87 & 0.94 \\\\\n",
-      "Random Forest & Ensemble-Imbalance & 0.87 & 0.96 & 0.79 & 0.93 \\\\\n",
-      "Random Forest & Single-Model & 0.87 & 0.89 & 0.86 & 0.92 \\\\\n",
-      "SVM & Ensemble-Imbalance & 0.87 & 0.94 & 0.81 & 0.93 \\\\\n",
-      "SVM & Single-Model & 0.87 & 0.94 & 0.80 & 0.93 \\\\\n",
-      "k-NN & Ensemble-Imbalance & 0.85 & 0.85 & 0.85 & 0.90 \\\\\n",
-      "k-NN & Single-Model & 0.68 & 0.40 & 0.96 & 0.81 \\\\\n",
+      "Decision Tree & Ensemble-Imbalance & 0.88 & 0.96 & 0.81 \\\\\n",
+      "Decision Tree & Single-Model & 0.83 & 0.85 & 0.81 \\\\\n",
+      "Naïve Bayes & Ensemble-Imbalance & 0.84 & 0.85 & 0.83 \\\\\n",
+      "Naïve Bayes & Single-Model & 0.80 & 0.74 & 0.86 \\\\\n",
+      "Neural Networks & Ensemble-Imbalance & 0.88 & 0.96 & 0.80 \\\\\n",
+      "Neural Networks & Single-Model & 0.87 & 0.87 & 0.87 \\\\\n",
+      "Random Forest & Ensemble-Imbalance & 0.87 & 0.96 & 0.79 \\\\\n",
+      "Random Forest & Single-Model & 0.87 & 0.89 & 0.86 \\\\\n",
+      "SVM & Ensemble-Imbalance & 0.87 & 0.94 & 0.81 \\\\\n",
+      "SVM & Single-Model & 0.87 & 0.94 & 0.80 \\\\\n",
+      "k-NN & Ensemble-Imbalance & 0.85 & 0.85 & 0.85 \\\\\n",
+      "k-NN & Single-Model & 0.68 & 0.40 & 0.96 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -576,9 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -752,9 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -869,9 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1449,7 +1443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
