--- a/05_Train_Validate_Models/20.2 - Adjusting figures to GENERAL format - Perform features importance analysis using SHAP DECISION TREE.ipynb
+++ b/05_Train_Validate_Models/20.2 - Adjusting figures to GENERAL format - Perform features importance analysis using SHAP DECISION TREE.ipynb
@@ -9,9 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_205354/703756968.py:5: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n",
-      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
+      "Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n"
      ]
     },
     {
@@ -1692,7 +1690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
